[tool.poetry]
name = "stock research agent"
version = "0.1.0"
description = "An agent to help provide stock analysis, insights and recommendations"
authors = ["Zac Burns <zacbburns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
